@@ -16,16 +16,16 @@ import org.synyx.urlaubsverwaltung.department.DepartmentService;
 import org.synyx.urlaubsverwaltung.period.DayLength;
 import org.synyx.urlaubsverwaltung.person.Person;
 import org.synyx.urlaubsverwaltung.person.PersonService;
-import org.synyx.urlaubsverwaltung.testdatacreator.TestDataCreator;
 
 import java.time.LocalDate;
-import java.util.Arrays;
+import java.util.List;
 import java.util.Optional;
 
 import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.is;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyInt;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.verifyZeroInteractions;
 import static org.mockito.Mockito.when;
@@ -34,6 +34,9 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.jsonPath;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 import static org.synyx.urlaubsverwaltung.application.domain.ApplicationStatus.ALLOWED;
+import static org.synyx.urlaubsverwaltung.application.domain.ApplicationStatus.ALLOWED_CANCEL_RE;
+import static org.synyx.urlaubsverwaltung.testdatacreator.TestDataCreator.createApplication;
+import static org.synyx.urlaubsverwaltung.testdatacreator.TestDataCreator.createPerson;
 
 
 @RunWith(MockitoJUnitRunner.class)
@@ -69,7 +72,7 @@ public class VacationApiControllerTest {
     @Test
     public void ensureReturnsAllowedVacationsOfPersonIfPersonProvided() throws Exception {
 
-        final Person person = TestDataCreator.createPerson();
+        final Person person = createPerson();
         when(personService.getPersonByID(anyInt())).thenReturn(Optional.of(person));
 
         perform(get("/api/vacations")
@@ -87,16 +90,16 @@ public class VacationApiControllerTest {
     @Test
     public void ensureCorrectConversionOfVacations() throws Exception {
 
-        final Application vacation1 = TestDataCreator.createApplication(TestDataCreator.createPerson("foo"),
-            LocalDate.of(2016, 5, 19), LocalDate.of(2016, 5, 20), DayLength.FULL);
+        final Person personOne = createPerson("personOne");
+        final Application vacation1 = createApplication(personOne, LocalDate.of(2016, 5, 19), LocalDate.of(2016, 5, 20), DayLength.FULL);
         vacation1.setStatus(ALLOWED);
 
-        final Application vacation2 = TestDataCreator.createApplication(TestDataCreator.createPerson("bar"),
-            LocalDate.of(2016, 4, 5), LocalDate.of(2016, 4, 10), DayLength.FULL);
+        final Person personTwo = createPerson("personTwo");
+        final Application vacation2 = createApplication(personTwo, LocalDate.of(2016, 4, 5), LocalDate.of(2016, 4, 10), DayLength.FULL);
+        vacation2.setStatus(ALLOWED_CANCEL_RE);
 
-        when(applicationService.getApplicationsForACertainPeriodAndState(any(LocalDate.class),
-            any(LocalDate.class), any(ApplicationStatus.class)))
-            .thenReturn(Arrays.asList(vacation1, vacation2));
+        when(applicationService.getApplicationsForACertainPeriodAndState(any(LocalDate.class), any(LocalDate.class), eq(ALLOWED))).thenReturn(List.of(vacation1));
+        when(applicationService.getApplicationsForACertainPeriodAndState(any(LocalDate.class), any(LocalDate.class), eq(ALLOWED_CANCEL_RE))).thenReturn(List.of( vacation2));
 
         perform(get("/api/vacations").param("from", "2016-01-01").param("to", "2016-12-31"))
             .andExpect(status().isOk())
